# fastapi-s3-service

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
app/: auth.py  config.py  exceptions.py  logger.py  main.py  protocols.py
app/clients/: http_client.py  self_client.py
app/resources/: sources.py
app/routers/: __init__.py  auth.py  local.py  root.py  s3.py
app/schemas/: s3_schema.py
app/services/: s3.py
app/templates/: index.html
app/use_cases/: self_usecase.py
tests/: conftest.py  test_auth.py  test_base.py  test_s3.py
